# skill-forge

./: Cargo.toml
database/: skillforge.db  skillforge.db-shm  skillforge.db-wal
infra/: Dockerfile  compose.yaml
migrations/: 20250509221509_init.down.sql  20250509221509_init.up.sql  20250510142019_add_password_on_user_table.down.sql  20250510142019_add_password_on_user_table.up.sql  20250512211352_add_role_table_and_relations.down.sql  20250512211352_add_role_table_and_relations.up.sql
src/: config.rs  main.rs
src/handlers/: auth.rs  mod.rs  role.rs  user.rs
src/models/: mod.rs  role.rs  user.rs  user_assigned_roles.rs
src/repos/: mod.rs  role.rs  user.rs
src/routes/: role.rs  user.rs
