[package]
name = "SkillForge_"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
axum = "0.8.4"
serde_json = "1.0.140"
serde = "1.0.219"
sqlx = {version = "0.8.5", features = ["postgres", "runtime-tokio", "tls-native-tls"]}
uuid = {version = "1.16.0", features = ["v4"]}
dotenv = "0.15.0"
argon2 = "0.5.3"
utoipa = {version = "5.3.1", features = ["axum_extras"]}
utoipa-swagger-ui = { version = "9", features = ["axum"] }